system/longhorn-system/templates/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-dashboard-tls
