system/longhorn-system/templates/dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://longhorn.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Storage
    gethomepage.dev/group: System
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/app: longhorn
    gethomepage.dev/podSelector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-dashboard-tls
